<resources>
    <string name="applovin_sdk_key">applovin_sdk_key</string>
    <string name="first_check">I understand that sharing of inappropriate content will not be tolerated.</string>
    <string name="generate_nwatch_an_ad">Generate AI Image</string>
    <string name="policy">https://www.freeprivacypolicy.com/live/3df33ce1-1276-4ee9-8237-12a294f1da76</string>
    <string name="get">Get</string>
    <string name="get_pro">Get PRO</string>
    <string name="gta">GTA</string>
    <string name="hd_images">HD images</string>
    <string name="second_check">I confirm that Im 18 years old or above.</string>
    <string name="see_all">see all</string>
    <string name="select_language">Select language</string>
    <string name="share">Share</string>
    <string name="share_app">Share App</string>
    <string name="share_your_art_with_the_world">Share your art with the world</string>
    <string name="sorry">Sorry!</string>
    <string name="spinners">Spinners</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_setting">Choose Setting</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="clickforprivacy">By Clicking \'Get Started\'. You are agree to above Terms of Use and Privacy Policy. </string>
    <string name="anime_v2">ANIME V2</string>
    <string name="app_desc">ImageAI AI Art Generator create beautiful art using the power of words with our AI art generator, Imagine AI</string>
    <string name="app_name">ImageAI AI Art Generator</string>
    <string name="unleash_your_imagination_s_power">Unleash Your Imaginations Power.</string>
    <string name="trending">Trending</string>
    <string name="try_now">Try Now</string>
    <string name="trytext">Try</string>
    <string name="ai_character">AI Character</string>
    <string name="ai_edit_images">AI Edit Images</string>
    <string name="ai_fashion">AI Fashion</string>
    <string name="ai_image">AI Image</string>
    <string name="ai_photorealism">AI Photorealism</string>
    <string name="ai_tools">AI Tools</string>
    <string name="let_s_try_different_fashion">let’s try different fashion</string>
    <string name="let_s_try_different_style">let’s try different style....</string>
    <string name="life_time">Life Time</string>
    <string name="absolute_reality">Absolute Reality</string>
    <string name="access">Access</string>
    <string name="add_image">Add Image</string>
    <string name="advance_ai_spinners">Advance AI Spinners</string>
    <string name="advance_settings">Advance Settings</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="ai_advance">AI Advance</string>
    <string name="ai_art">AI Art</string>
    <string name="consistency">Consistency</string>
    <string name="continue_">Continue</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="cosmic">COSMIC</string>
    <string name="dark_sushi">Dark Sushi</string>
    <string name="deep_dive">Deep Dive</string>
    <string name="dream_shaper">Dream Shaper</string>
    <string name="enter_prompt">Enter Prompt</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="euphoric">EUPHORIC</string>
    <string name="aspect_ratio">Aspect Ratio</string>
    <string name="aspect_ratios">Aspect ratios</string>
    <string name="model">Model</string>
    <string name="model_and_style">Model and style</string>
    <string name="monthly">Monthly</string>
    <string name="more_apps">More Apps</string>
    <string name="fantasy">FANTASY</string>
    <string name="fast_amp_high">Fast &amp; High</string>
    <string name="faster_processing">Faster processing</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="image_remix">Image Remix</string>
    <string name="inspiration">Inspiration</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to Exit ?</string>
    <string name="no">No</string>
    <string name="text_homefrag_prompt">Avengers but Coffee Baristas: Serve up a super-powered cup of joe as the Avengers become talented coffee baristas in a realistic coffee shop setting.</string>
    <string name="style">Style</string>
    <string name="styles">Styles</string>
    <string name="watch_an_ad">watch an ad</string>
    <string name="weekly">Weekly</string>
    <string name="year">Year</string>
    <string name="yes">Yes</string>
    <string name="you_can_upload_your_photos_and_use_nprompts_to_make_dramatic_changes_to_your_nimages">You can upload your photos and use\nprompts to make dramatic changes to your\nimages</string>
    <string name="rate_app">Rate App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="update_app">Update App</string>
    <string name="upload_image">Upload Image</string>
    <string name="original">Original</string>
    <string name="negative_prompt">Negative prompt</string>
    <string name="no_watermark">No watermark</string>
    <string name="item_character_10_text">Art made by Daniel F Gerhartz, Victor Miller-Gausa, Antonio Manzanedo, of main character of Disenchantment princess Tiabeanie Mariabeanie de la Rochambeaux Grunkwitz as known as Bean, disheveled white hair, tight light blue shirt and brown pants, portrait, cinematic lighting, concept photoart, 32k, photoshoot on the throne, unbelievable full length portrait, dark grading undertones, cinematic lighting, hyper detailed, realistic, figurative painter with intricate details, divine proportion, sharp focus, Mysterious</string>
    <string name="item_character_11_text">Portrait of a very beautiful girl in the image of the Joker in the style of Christopher Nolan, Women batman costume, an evil grin on her face, looking into a broken mirror, there is an atmosphere of horror and fear around, you can see a beautiful body, professional photo, high detail, attention to detail, in the style of wallpaper, realism, pearl illusion, cyberpunk, fashion trends, 3s material, HD, detail performance, c4d, 3D, octane rendering, ray tracing, complex details, animated lighting,</string>
    <string name="item_character_12_text">Spider man in dynamics, highly detailed, packed with hidden details, style, high dynamic range, hyper realistic, realistic attention to detail, highly detailed, 32K, intense close - ups, uhd image, realism, colorful realism,</string>
    <string name="item_character_13_text">girl posing in Shibuya for a photo shoot, detailed anime style face, manga style drawing, highly detailed face, pretty facial features, 2d, hand drawn, digital drawing of a manga character, fashionable modern clothing, trendy Instagram influencer, Tokyo street style, dynamic pose, bright lighting, anime character portrait</string>
    <string name="item_character_14_text">(best quality,ultra-detalhado),centered,(Realistic) Raphtalia, (anime),(retrato),(vermelho e branco),(clear lighting),(armaduras e armas detalhadas), (fierce expression),(Intensa cena de batalha),(fantasia),(Olhos determinados),(flowing hair),(foco nítido),(vivid colors),(magic effects),(heroic),(epics),(emocional),(cativante),(master part:1.2)</string>
    <string name="item_character_15_text">In the bustling city of Central City, a bolt of lightning strikes the laboratory of Barry Allen, a brilliant forensic scientist. Suddenly, he finds himself transformed into the fastest man alive, the Scarlet Speedster known as The Flash. With his red suit and lightning bolt emblem, he races against time to protect his city from criminals and metahuman threats. As he hurtles through the streets, he leaves a trail of lightning in his wake, embodying the very essence of speed itself. But behind the mask, Barry Allen grapples with the responsibilities of his dual life and the eternal quest for answers about his newfound powers. The Flash adventures are a whirlwind of excitement, justice, and the eternal pursuit of truth, intricate design and details, dramatic lighting, hyperrealism, photorealistic, cinematic, 8k</string>
    <string name="item_character_16_text">A detailed art portrait of Squall Leonhart, Final fantasy VIII, intricate details, 4k, sharp focus, photo realistic, luis royo, H. R. Giger</string>
    <string name="item_character_17_text">HDR photo of A photo of a slender anime girl with petite bust, toned abs, standing in gym, with photo-realistic style, crisp lines, vibrant colors, highlighting her beauty. . High dynamic range, vivid, rich details, clear shadows and highlights, realistic, intense, enhanced contrast, highly detailed</string>
    <string name="item_character_18_text">A portrait of a female final fantasy ethereal character figure in the realm of fantasy, muscular and well-built physique, with piercing eyes, exudes an aura of power and strength, shiny metal armor, skilled in swordsmanship, able to wield a sword with precision and speed, has a natural affinity for nature magic, She can communicate with animals, control plants, and summon natural elements to aid her in battle, highly detailed, 8k resolution, smooth, in focus, photo realistic, finely detailed</string>
    <string name="item_character_1_text">Bare skin, apron, kitchen, cooking, cutting, long hair, hair, smooth hair, blonde hair, European, blissful, happy, robot, mechanical, artificial, natural, soothing, warming, Caucasian, detailed face, highly detailed, intricate details, symmetrical, digital 3d, hard surface, real-time, vfx, volumetric lighting, ambient light, ultra hd, hdr, soft, well proportioned</string>
    <string name="item_character_2_text">Imagine a woman handcrafted by the Gods: She emerging from molten lava, levitating above the heart of a volcano. She in a otherworldly dress made by fire and ashes that shapes her body perfectly. Her face resembles of a beautiful woman with some magical elements. Her hair is fiery red and is fueled by the very energy of life itself, a throwback to The Creation at the same time connecting with today nature. Every element of this portrait should come together naturally creating that most beautiful concept art ever created.</string>
    <string name="item_character_3_text">studio lighting, film, movie scene, extreme detail, 12k, masterpiece, hyperrealistic, realistic, Krillin from Dragon Ball going super saiyan, Canon EOS R6 Mark II, fiery particles in the air, smoke in the background, void, cell shaded, (detailed hands), golden eyebrows, blue eyes, detailed fingers, detailed muscles, anatomically correct, left palm outstretched and firing a blast of energy</string>
    <string name="item_character_4_text">McDonald’s as a villain in mortal kombat, hyper realistic</string>
    <string name="item_character_5_text">Art in fantasy Anime Style Painter action effect, sharp focus, studio photo, masterpiece, UHD</string>
    <string name="item_character_6_text">male apache warrior figure in war derss with war bonnets headdress, feirce, face painted, armed figure, dual wielding axe, intricate native Indian outfit, intricate details, ornate cinematic lighting, high definition, high details, focused, unreal engine 5, cinematic, depth of field, on battleground environment, photography, dramatic light, natural light, photorealism, real shadow, soft illumination, ray tracing, cinematic rendering, 8K, vfx post production, rtx tracing lighting, octane rendering</string>
</resources>