<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <group android:checkableBehavior="single">
        <item android:title="Ai image Generator">
            <menu>
                <item
                    android:icon="@drawable/rateus_icon"
                    android:id="@+id/rate_app"
                    android:title="@string/rate_app"/>
                <item
                    android:icon="@drawable/share_app_icon"
                    android:id="@+id/share_app"
                    android:title="@string/share_app"/>
                <item
                    android:icon="@drawable/more_apps"
                    android:id="@+id/more_apps"
                    android:title="@string/more_apps"/>
                <item
                    android:icon="@drawable/privacy_policy_new"
                    android:id="@+id/policy"
                    android:title="@string/privacy_policy"/>
            </menu>
        </item>
    </group>
</menu>
