<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt"
    android:id="@+id/image_ai_sampler"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintWidth_percent="0.9">
        <androidx.appcompat.widget.AppCompatButton
            android:textColor="@color/black"
            android:id="@+id/ddim_btn"
            android:background="@drawable/gradient_drawable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/deep_dive"
            android:textAllCaps="false"
            android:fontFamily="@font/nunito_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/lms_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1"/>
        <androidx.appcompat.widget.AppCompatButton
            android:textColor="@color/black"
            android:id="@+id/lms_btn"
            android:background="@drawable/gradient_drawable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/consistency"
            android:textAllCaps="false"
            android:fontFamily="@font/nunito_regular"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_6sdp"
            app:layout_constraintBottom_toBottomOf="@+id/ddim_btn"
            app:layout_constraintEnd_toStartOf="@+id/eular_btn"
            app:layout_constraintStart_toEndOf="@+id/ddim_btn"
            app:layout_constraintTop_toTopOf="@+id/ddim_btn"
            app:layout_constraintVertical_bias="0.5"/>
        <androidx.appcompat.widget.AppCompatButton
            android:textColor="@color/black"
            android:id="@+id/eular_btn"
            android:background="@drawable/gradient_drawable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/original"
            android:textAllCaps="false"
            android:fontFamily="@font/nunito_regular"
            app:layout_constraintBottom_toBottomOf="@+id/lms_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/lms_btn"
            app:layout_constraintTop_toTopOf="@+id/lms_btn"
            app:layout_constraintVertical_bias="0.5"/>
        <androidx.appcompat.widget.AppCompatButton
            android:textColor="@color/black"
            android:id="@+id/eular_a_btn"
            android:background="@drawable/gradient_drawable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/ai_advance"
            android:textAllCaps="false"
            android:fontFamily="@font/nunito_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/ddim_btn"
            app:layout_constraintStart_toStartOf="@+id/ddim_btn"
            app:layout_constraintTop_toBottomOf="@+id/ddim_btn"
            app:layout_constraintVertical_bias="0.5"/>
        <androidx.appcompat.widget.AppCompatButton
            android:textColor="@color/black"
            android:id="@+id/dpmsolver_btn"
            android:background="@drawable/gradient_drawable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fast_amp_high"
            android:textAllCaps="false"
            android:fontFamily="@font/nunito_regular"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_6sdp"
            app:layout_constraintBottom_toBottomOf="@+id/eular_a_btn"
            app:layout_constraintEnd_toStartOf="@+id/pndm_btn"
            app:layout_constraintStart_toEndOf="@+id/eular_a_btn"
            app:layout_constraintTop_toTopOf="@+id/eular_a_btn"
            app:layout_constraintVertical_bias="0.5"/>
        <androidx.appcompat.widget.AppCompatButton
            android:textColor="@color/black"
            android:id="@+id/pndm_btn"
            android:background="@drawable/gradient_drawable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/trending"
            android:textAllCaps="false"
            android:fontFamily="@font/nunito_regular"
            app:layout_constraintBottom_toBottomOf="@+id/dpmsolver_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/dpmsolver_btn"
            app:layout_constraintTop_toTopOf="@+id/dpmsolver_btn"
            app:layout_constraintVertical_bias="0.5"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
