<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.AppCompatButton
        android:gravity="start|center_vertical"
        android:id="@+id/rate_app"
        android:background="@drawable/item_bg_drawer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:text="@string/rate_app"
        android:drawableLeft="@drawable/rateus_icon"
        android:drawablePadding="@dimen/_10sdp"
        android:textAllCaps="false"
        android:paddingStart="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.75"/>
    <androidx.appcompat.widget.AppCompatButton
        android:gravity="start|center_vertical"
        android:id="@+id/share_app"
        android:background="@drawable/item_bg_mid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/share_app"
        android:drawableLeft="@drawable/share_app_icon"
        android:drawablePadding="@dimen/_10sdp"
        android:textAllCaps="false"
        android:paddingStart="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate_app"
        app:layout_constraintWidth_percent="0.75"/>
    <androidx.appcompat.widget.AppCompatButton
        android:gravity="start|center_vertical"
        android:id="@+id/update_btn"
        android:background="@drawable/item_bg_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/update_app"
        android:drawableLeft="@drawable/update_btn_icon"
        android:drawablePadding="@dimen/_10sdp"
        android:textAllCaps="false"
        android:paddingStart="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/share_app"
        app:layout_constraintWidth_percent="0.75"/>
    <androidx.appcompat.widget.AppCompatButton
        android:gravity="start|center_vertical"
        android:id="@+id/more_apps"
        android:background="@drawable/item_bg_drawer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:text="@string/more_apps"
        android:drawableLeft="@drawable/more_apps"
        android:drawablePadding="@dimen/_10sdp"
        android:textAllCaps="false"
        android:paddingStart="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_btn"
        app:layout_constraintWidth_percent="0.75"/>
    <androidx.appcompat.widget.AppCompatButton
        android:gravity="start|center_vertical"
        android:id="@+id/policy"
        android:background="@drawable/item_bg_mid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/privacy_policy"
        android:drawableLeft="@drawable/privacy_policy_new"
        android:drawablePadding="@dimen/_10sdp"
        android:textAllCaps="false"
        android:paddingStart="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/more_apps"
        app:layout_constraintWidth_percent="0.75"/>
    <androidx.appcompat.widget.AppCompatButton
        android:gravity="start|center_vertical"
        android:id="@+id/termsandconditions"
        android:background="@drawable/item_bg_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="Terms and Conditions"
        android:drawableLeft="@drawable/terms_icon"
        android:drawablePadding="@dimen/_10sdp"
        android:textAllCaps="false"
        android:paddingStart="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/policy"
        app:layout_constraintWidth_percent="0.75"/>
</androidx.constraintlayout.widget.ConstraintLayout>
