<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt"
    android:id="@+id/cons_slider_character"
    android:background="#f5f5f5"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintWidth_percent="0.5"/>
    <TextView
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ai_character"
        android:fontFamily="@font/poppins_semi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"/>
    <TextView
        android:textSize="@dimen/_10sdp"
        android:textStyle="bold"
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_try_different_fashion"
        android:fontFamily="@font/poppins_semi"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9"/>
    <androidx.appcompat.widget.AppCompatButton
        android:textSize="@dimen/_8sdp"
        android:textColor="@color/white"
        android:background="@drawable/try_now_button_bg_slider"
        android:focusable="false"
        android:clickable="false"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/try_now"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintWidth_percent="0.15"/>
</androidx.constraintlayout.widget.ConstraintLayout>
