<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintWidth_percent="0.9">
        <androidx.appcompat.widget.AppCompatButton
            android:textColor="@color/black"
            android:id="@+id/ai_photoreaslism"
            android:background="@drawable/gradient_drawable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:text="@string/ai_photorealism"
            android:drawableRight="@drawable/ic_arrow_down_black"
            android:textAllCaps="false"
            android:fontFamily="@font/nunito_regular"
            android:paddingEnd="@dimen/_9sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ai_art"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"/>
        <androidx.appcompat.widget.AppCompatButton
            android:textColor="@color/black"
            android:id="@+id/ai_art"
            android:background="@drawable/gradient_drawable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ai_art"
            android:drawableRight="@drawable/ic_arrow_down_black"
            android:textAllCaps="false"
            android:fontFamily="@font/nunito_regular"
            android:paddingEnd="@dimen/_7sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="@+id/ai_photoreaslism"
            app:layout_constraintEnd_toStartOf="@+id/ai_style"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/ai_photoreaslism"
            app:layout_constraintTop_toTopOf="@+id/ai_photoreaslism"
            app:layout_constraintVertical_bias="0.5"/>
        <androidx.appcompat.widget.AppCompatButton
            android:textColor="@color/black"
            android:id="@+id/ai_style"
            android:background="@drawable/gradient_drawable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/styles"
            android:drawableRight="@drawable/ic_arrow_down_black"
            android:textAllCaps="false"
            android:fontFamily="@font/nunito_regular"
            android:paddingEnd="@dimen/_7sdp"
            app:layout_constraintBottom_toBottomOf="@+id/ai_art"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/ai_art"
            app:layout_constraintTop_toTopOf="@+id/ai_art"
            app:layout_constraintVertical_bias="0.5"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
