<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/animationConnectionUpdate"
            android:background="@drawable/exit_image"
            android:visibility="visible"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1"/>
        <TextView
            android:textSize="18sp"
            android:textColor="#5e5e5e"
            android:gravity="center"
            android:id="@+id/description"
            android:paddingTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/are_you_sure_you_want_to_exit"
            android:layout_below="@+id/animationConnectionUpdate"
            android:layout_centerHorizontal="true"
            app:layout_constraintEnd_toEndOf="@+id/animationConnectionUpdate"
            app:layout_constraintStart_toStartOf="@+id/animationConnectionUpdate"
            app:layout_constraintTop_toBottomOf="@+id/animationConnectionUpdate"/>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/linearLayout"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="9dp"
            android:layout_below="@+id/description"
            android:layout_centerHorizontal="true"
            app:layout_constraintBottom_toTopOf="@+id/frameLayout"
            app:layout_constraintEnd_toEndOf="@+id/animationConnectionUpdate"
            app:layout_constraintStart_toStartOf="@+id/animationConnectionUpdate"
            app:layout_constraintTop_toBottomOf="@+id/description">
            <androidx.appcompat.widget.AppCompatButton
                android:textSize="16sp"
                android:textColor="@color/black"
                android:id="@+id/btnOk"
                android:background="@drawable/ic_border_exitbtn"
                android:layout_width="125dp"
                android:layout_height="35dp"
                android:layout_marginBottom="10dp"
                android:text="@string/yes"
                android:textAllCaps="false"/>
            <androidx.appcompat.widget.AppCompatButton
                android:textSize="16sp"
                android:textColor="#ffffff"
                android:id="@+id/btnCancel"
                android:background="@drawable/rounded_corners_rect_no_exit"
                android:layout_width="125dp"
                android:layout_height="35dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/no"
                android:textAllCaps="false"/>
        </LinearLayout>
        <FrameLayout
            android:id="@+id/frameLayout"
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginTop="4dp"
            android:translationZ="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
                <include
                    android:id="@+id/small_native_ad"
                    android:visibility="visible"
                    layout="@layout/ads_layout_small_native"/>
            </LinearLayout>
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
